index.css
.App-link {
  color: #61dafb;
}

.App-logo {
  transform: rotateX("40");
}

.buttonrow {
  display: flex;
  flex-direction: row;
  align-items: center;
}

a {
  /* font-family: "Source Sans Pro", sans-serif; */
  font-size: 20px;
  font-weight: 600;
  background-color: rgb(0, 0, 255);
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  padding: 8px 16px;
  margin: 0 16px;
  text-decoration: none;
  /* width: 160px; */
  height: 32px;
  border-radius: 8px;
  color: white;
}

h1 {
  font-size: 32px;
}

p {
  width: 80vw;
  font-size: 18px;
  text-align: center;
}

a:hover {
  background-color: darkblue;
}

body {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;

  text-align: center;
  font-family: "Baloo", cursive;
  width: 100vw;
  height: 90vh;
  color: #fff;
  background: linear-gradient(45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
  background-size: 400% 400%;
  background-clip: initial;
  -webkit-animation: Gradient 15s ease infinite;
  -moz-animation: Gradient 15s ease infinite;
  animation: Gradient 15s ease infinite;
  background-clip: initial;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@-webkit-keyframes Gradient {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

@-moz-keyframes Gradient {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

@keyframes Gradient {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

